--- a/domain-transfer.html
+++ b/domain-transfer.html
@@ -7,7 +7,8 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <meta
       content="Hostco - Modern Web Hosting & WHMCS Template"
-      name="description" />
+      name="description"
+    />
     <meta content="" name="keywords" />
     <meta content="" name="author" />
     <!-- CSS Files
@@ -16,7 +17,8 @@
       href="css/bootstrap.min.css"
       rel="stylesheet"
       type="text/css"
-      id="bootstrap" />
+      id="bootstrap"
+    />
     <link href="css/mdb.min.css" rel="stylesheet" type="text/css" id="mdb" />
     <link href="css/plugins.css" rel="stylesheet" type="text/css" />
     <link href="css/style.css" rel="stylesheet" type="text/css" />
@@ -26,7 +28,8 @@
       id="colors"
       href="css/colors/scheme-07.css"
       rel="stylesheet"
-      type="text/css" />
+      type="text/css"
+    />
   </head>
 
   <body class="dark-scheme">
@@ -65,18 +68,19 @@
                     <div id="logo">
                       <a href="index.html">
                         <img
-                        width="100px"
-                        height="100px"
-                        style="object-fit: contain;"
+                          width="100px"
+                          height="100px"
+                          style="object-fit: contain"
                           class="logo-main"
                           src="images/logo-main.png"
-                          alt="" />
+                          alt=""
+                        />
                         <img
-                        
-                        style="object-fit: contain; width:100px;"
+                          style="object-fit: contain; width: 100px"
                           class="logo-mobile"
                           src="images/logo-main.png"
-                          alt="" />
+                          alt=""
+                        />
                       </a>
                     </div>
                     <!-- logo close -->
@@ -85,9 +89,7 @@
                 <div class="de-flex-col header-col-mid">
                   <ul id="mainmenu">
                     <li>
-                      <a class="menu-item" href="index.html"
-                        >Home</a
-                      >
+                      <a class="menu-item" href="index.html">Home</a>
                     </li>
                     <li>
                       <a class="menu-item" href="shared-hosting.html"
@@ -110,10 +112,12 @@
                                 <div class="col-lg-4">
                                   <a
                                     class="box-icon mb20"
-                                    href="shared-hosting.html">
+                                    href="shared-hosting.html"
+                                  >
                                     <img
                                       src="images/svg-blue/server-svgrepo-com.svg"
-                                      alt="" />
+                                      alt=""
+                                    />
                                     <div class="d-inner">
                                       <h4>Shared Hosting</h4>
                                       Simple and powerfull hosting for everyone.
@@ -121,10 +125,12 @@
                                   </a>
                                   <a
                                     class="box-icon mb20"
-                                    href="cloud-hosting.html">
+                                    href="cloud-hosting.html"
+                                  >
                                     <img
                                       src="images/svg-blue/cloud-svgrepo-com.svg"
-                                      alt="" />
+                                      alt=""
+                                    />
                                     <div class="d-inner">
                                       <h4>Cloud Hosting</h4>
                                       For more speed & less downtime.
@@ -134,10 +140,12 @@
                                 <div class="col-lg-4">
                                   <a
                                     class="box-icon mb20"
-                                    href="managed-services.html">
+                                    href="managed-services.html"
+                                  >
                                     <img
                                       src="images/svg-blue/server-2-svgrepo-com.svg"
-                                      alt="" />
+                                      alt=""
+                                    />
                                     <div class="d-inner">
                                       <h4>Managed Services</h4>
                                       For power and flexibility you need.
@@ -145,10 +153,12 @@
                                   </a>
                                   <a
                                     class="box-icon mb20"
-                                    href="wordpress-hosting.html">
+                                    href="wordpress-hosting.html"
+                                  >
                                     <img
                                       src="images/svg-blue/wordpress-svgrepo-com.svg"
-                                      alt="" />
+                                      alt=""
+                                    />
                                     <div class="d-inner">
                                       <h4>WordPress Hosting</h4>
                                       Optimized hosting for WordPress sites.
@@ -162,17 +172,23 @@
                       </ul>
                     </li>
                     <li>
-                      <a class="menu-item" href="domain-registration.html">Domain</a>
+                      <a class="menu-item" href="domain-registration.html"
+                        >Domain</a
+                      >
                       <ul class="mega">
                         <li>
                           <div class="container">
                             <div class="sb-menu p-4">
                               <div class="row">
                                 <div class="col-lg-3">
-                                  <a class="box-icon mb20" href="domain-registration.html">
+                                  <a
+                                    class="box-icon mb20"
+                                    href="domain-registration.html"
+                                  >
                                     <img
                                       src="images/svg-blue/domain-registration-svgrepo-com.svg"
-                                      alt="" />
+                                      alt=""
+                                    />
                                     <div class="d-inner">
                                       <h4>Domain Registration</h4>
                                       Search for your perfect domain name.
@@ -182,10 +198,12 @@
                                 <div class="col-lg-3">
                                   <a
                                     class="box-icon mb20"
-                                    href="domain-transfer.html">
+                                    href="domain-transfer.html"
+                                  >
                                     <img
                                       src="images/svg-blue/transfer-svgrepo-com.svg"
-                                      alt="" />
+                                      alt=""
+                                    />
                                     <div class="d-inner">
                                       <h4>Domain Transfer</h4>
                                       Transfer your domain with easy steps.
@@ -193,12 +211,11 @@
                                   </a>
                                 </div>
                                 <div class="col-lg-3">
-                                  <a
-                                    class="box-icon mb20"
-                                    href="pricing.html">
+                                  <a class="box-icon mb20" href="pricing.html">
                                     <img
                                       src="images/svg-blue/price-tag-svgrepo-com.svg"
-                                      alt="" />
+                                      alt=""
+                                    />
                                     <div class="d-inner">
                                       <h4>Domain Pricing</h4>
                                       Complete list of domain pricing.
@@ -278,13 +295,12 @@
                       <!-- <a href="login.html" >Register</a> -->
                     </li>
                     <li>
-                      <button class="menu-item-btn ">Log In</button>
+                      <button class="menu-item-btn">Log In</button>
                     </li>
                   </ul>
                 </div>
                 <div class="de-flex-col">
                   <div class="menu_side_area">
-
                     <span id="menu-btn"></span>
                   </div>
                 </div>
@@ -299,7 +315,11 @@
         <div id="top"></div>
         <!-- section begin -->
         <section class="jarallax">
-          <img src="images/background/hosting.png" class="jarallax-img" alt="" />
+          <img
+            src="images/background/hosting.png"
+            class="jarallax-img"
+            alt=""
+          />
           <div class="container">
             <div class="row align-items-center">
               <div class="col-md-8 offset-md-2 text-center">
@@ -311,7 +331,8 @@
                   data-wow-delay="1.25s"
                   id="form_sb"
                   method="post"
-                  name="form_sb">
+                  name="form_sb"
+                >
                   <div class="col">
                     <div class="spacer-10"></div>
                     <input
@@ -319,7 +340,8 @@
                       id="domain_name"
                       name="domain_name"
                       placeholder="enter domain name you want to transfer"
-                      type="text" />
+                      type="text"
+                    />
                     <a
                       id="btn-submit"
                       href="javascript:;"
@@ -349,24 +371,26 @@
                     <i class="icon-alarmclock de-icon mb20"></i>
                     <h4>No Time Lost</h4>
                     <p class="d-small">
-                      Lorem ipsum laborum nulla deserunt exercitation eiusmod ex
-                      in eiusmod culpa aliqua amet.
+                      Experience lightning-fast loading speeds and uninterrupted
+                      service with our efficient web hosting solutions.
                     </p>
                   </div>
                   <div class="col-lg-4 col-md-4 text-center">
                     <i class="icon-refresh de-icon mb20"></i>
                     <h4>Stay Online</h4>
                     <p class="d-small">
-                      Lorem ipsum laborum nulla deserunt exercitation eiusmod ex
-                      in eiusmod culpa aliqua amet.
+                      Our reliable web hosting ensures your website is always
+                      accessible, keeping your online presence strong and
+                      uninterrupted.
                     </p>
                   </div>
                   <div class="col-lg-4 col-md-4 text-center">
                     <i class="icon-cloud de-icon mb20"></i>
                     <h4>Daily Backup</h4>
                     <p class="d-small">
-                      Lorem ipsum laborum nulla deserunt exercitation eiusmod ex
-                      in eiusmod culpa aliqua amet.
+                      Rest easy knowing your website data is safeguarded with
+                      our daily automated backups, providing you with peace of
+                      mind and data recovery assurance.
                     </p>
                   </div>
                 </div>
@@ -506,7 +530,8 @@
                   <div class="accordion-section">
                     <div
                       class="accordion-section-title"
-                      data-tab="#accordion-1">
+                      data-tab="#accordion-1"
+                    >
                       How do I get started with web hosting?
                     </div>
                     <div class="accordion-section-content" id="accordion-1">
@@ -522,7 +547,8 @@
                     </div>
                     <div
                       class="accordion-section-title"
-                      data-tab="#accordion-2">
+                      data-tab="#accordion-2"
+                    >
                       What is difference for each plan?
                     </div>
                     <div class="accordion-section-content" id="accordion-2">
@@ -538,7 +564,8 @@
                     </div>
                     <div
                       class="accordion-section-title"
-                      data-tab="#accordion-3">
+                      data-tab="#accordion-3"
+                    >
                       What kind of web hosting do I need?
                     </div>
                     <div class="accordion-section-content" id="accordion-3">
@@ -561,7 +588,8 @@
                   <div class="accordion-section">
                     <div
                       class="accordion-section-title"
-                      data-tab="#accordion-b-4">
+                      data-tab="#accordion-b-4"
+                    >
                       Why do I need domain name?
                     </div>
                     <div class="accordion-section-content" id="accordion-b-4">
@@ -577,7 +605,8 @@
                     </div>
                     <div
                       class="accordion-section-title"
-                      data-tab="#accordion-b-5">
+                      data-tab="#accordion-b-5"
+                    >
                       What my website protected from hackers?
                     </div>
                     <div class="accordion-section-content" id="accordion-b-5">
@@ -593,7 +622,8 @@
                     </div>
                     <div
                       class="accordion-section-title"
-                      data-tab="#accordion-b-6">
+                      data-tab="#accordion-b-6"
+                    >
                       How do I backup my website?
                     </div>
                     <div class="accordion-section-content" id="accordion-b-6">
@@ -616,14 +646,16 @@
         <section
           id="section-banner"
           class="no-bottom no-top"
-          data-bgcolor="#15182d">
+          data-bgcolor="#15182d"
+        >
           <div class="container">
             <div class="row align-items-center g-custom-x">
               <div class="col-lg-4 d-none d-lg-block d-xl-block text-center">
                 <img
                   class="relative img-fluid mt-60"
                   src="images/misc/1.png"
-                  alt="" />
+                  alt=""
+                />
               </div>
 
               <div class="col-lg-4 col-md-6">
@@ -661,22 +693,23 @@
           <div class="row g-custom-x">
             <div class="col-lg-4">
               <a href="index.html">
-                
                 <img
-                width="150px"
-                height="150px"
-                style="object-fit: contain;"
+                  width="150px"
+                  height="150px"
+                  style="object-fit: contain"
                   class="logo-main"
                   src="images/logo-main.png"
-                  alt="" />
+                  alt=""
+                />
                 <div class="spacer-20"></div>
                 <p>
                   We are BlumintHost, a web hosting company with 24/7 customer
                   support. We provide best hosting solutions for your hosting
                   needs. Our clients from personal to corporate. Our data center
                   are all over the world to ensure your website is always up.
-                  You can choose shared hosting, Managed Services or cloud hosting.
-                  You can also be hosting reseller here. Happy hosting with us.
+                  You can choose shared hosting, Managed Services or cloud
+                  hosting. You can also be hosting reseller here. Happy hosting
+                  with us.
                 </p>
               </a>
               <div class="spacer-10"></div>
@@ -685,19 +718,23 @@
                 <img
                   class="img-card-sm"
                   src="images/payments-logo/visa.png"
-                  alt="" />
+                  alt=""
+                />
                 <img
                   class="img-card-sm"
                   src="images/payments-logo/master-card.png"
-                  alt="" />
+                  alt=""
+                />
                 <img
                   class="img-card-sm"
                   src="images/payments-logo/paystack.svg"
-                  alt="" />
+                  alt=""
+                />
                 <img
                   class="img-card-sm"
                   src="images/payments-logo/paypal.png"
-                  alt="" />
+                  alt=""
+                />
               </div>
             </div>
             <div class="col-lg-4">
@@ -742,14 +779,16 @@
                   class="row form-dark"
                   id="form_subscribe"
                   method="post"
-                  name="form_subscribe">
+                  name="form_subscribe"
+                >
                   <div class="col text-center">
                     <input
                       class="form-control"
                       id="txt_subscribe"
                       name="txt_subscribe"
                       placeholder="enter your email"
-                      type="text" />
+                      type="text"
+                    />
                     <a href="#" id="btn-subscribe"
                       ><i class="arrow_right bg-color-secondary"></i
                     ></a>
@@ -778,9 +817,7 @@
               <div class="col-md-12">
                 <div class="de-flex">
                   <div class="de-flex-col">
-                    <a href="index.html">
-                      Copyright 2023 - BlumintHost
-                    </a>
+                    <a href="index.html"> Copyright 2023 - BlumintHost </a>
                   </div>
                   <ul class="menu-simple">
                     <li><a href="#">Terms &amp; Conditions</a></li>
